[tool.poetry]
name = "pubmed-papers"
version = "0.1.0"
description = ""
authors = ["Vedant <vedant1204jsg@gmail.com>"]
readme = "README.md"
packages = [{include = "test"}]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.28.1"

[tool.poetry.scripts]
get-papers-list = "test:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
